--- a/index.html
+++ b/index.html
@@ -26,23 +26,38 @@
     height: 80px;
     background-color: rgb(23, 23, 23);
     border-bottom: 1px solid black;
-    display: none;
-    align-items: center;
-    padding-left: 10px;
-    box-sizing: border-box;
-  }
-
-  .banner a {
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    height: 100%;
+    padding: 0 20px;
+    box-sizing: border-box;
+    opacity: 0; /* Initially hidden */
   }
 
   .banner img {
     height: 106px;
     width: auto;
-    margin-right: 10px;
     cursor: pointer;
+  }
+
+  .banner .buttons {
+    display: flex;
+    gap: 10px;
+  }
+
+  .banner button {
+    background-color: rgb(19, 19, 19);
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: background-color 0.3s, color 0.3s;
+  }
+
+  .banner button:hover {
+    background-color: white;
+    color: black;
   }
 
   .container {
@@ -94,9 +109,10 @@
   }
 
   .box {
+    position: relative; /* Ensure relative positioning for ::before pseudo-element */
     width: 400px; /* Adjusted width */
     height: 500px; /* Adjusted height */
-    background-color: rgb(14, 14, 14); /* Fully black background */
+    background-color: rgba(14, 14, 14, 0.7); /* Background color with 70% opacity */
     border: 5px solid rgb(153, 0, 235); /* Purple border */
     display: flex;
     flex-direction: column;
@@ -109,6 +125,23 @@
     transition: transform 0.3s ease-out, box-shadow 0.3s ease-out; /* Added box-shadow transition */
     box-shadow: 0 0 20px rgb(153, 0, 235);
     box-sizing: border-box; /* Ensure padding and border are included in width */
+  }
+
+  .box::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('purp.png');
+    opacity: 0.3; /* Adjusted opacity of the background image */
+    z-index: -1;
+    border-radius: 10px; /* Match the box's border radius */
+  }
+
+  .box:hover::before {
+    opacity: 0.3; /* Ensure opacity remains at 30% on hover as well */
   }
 
   .box:hover {
@@ -198,16 +231,19 @@
 </head>
 <body>
 <div class="container">
-  <div class="vanish-text">Vanish</div>
+  <div class="vanish-text">Vanish Tools</div>
 </div>
 <div class="banner" id="banner">
-  <a href="https://discord.gg/vanishgg" target="_blank">
-    <img src="skilol.png" alt="Skill Icon">
-  </a>
-</div>
-
-<div id="closeBox" style="position: absolute; top: 90px; left: 20px; width: 50px; height: 50px; background-color: black; color: white; display: none; justify-content: center; align-items: center; font-size: 1.5rem; border: 2px solid black; border-radius: 5px; cursor: pointer;">
-  -
+  <div class="banner-left">
+    <a href="https://discord.gg/vanishgg" target="_blank">
+      <img src="skilol.png" alt="Skill Icon">
+    </a>
+  </div>
+  <div class="banner-right">
+    <button class="rounded-button">Home</button>
+    <button class="rounded-button" onclick="navigateToReview()">Showcase</button>
+    <button class="rounded-button">Coming Soon</button>
+  </div>
 </div>
 
 <div class="box-container" id="boxContainer">
@@ -228,7 +264,7 @@
   </div>
   <div class="panel-content">
     <a href="index.html" class="panel-button">Home</a>
-    <a href="review.html" class="panel-button">Reviews</a>
+    <a href="showcase.html" class="panel-button">Reviews</a>
   </div>
 </div>
 
@@ -236,7 +272,6 @@
   const vanishText = document.querySelector('.vanish-text');
   const banner = document.getElementById('banner');
   const boxContainer = document.getElementById('boxContainer');
-  const closeBox = document.getElementById('closeBox');
   const sidePanel = document.getElementById('sidePanel');
 
   // Function to toggle side panel
@@ -244,19 +279,20 @@
     sidePanel.style.left = sidePanel.style.left === '-100%' ? '0' : '-100%';
   }
 
-  // Event listener for close box click
-  closeBox.addEventListener('click', toggleSidePanel);
+  // Function to navigate to review.html
+  function navigateToReview() {
+    window.location.href = 'showcase.html';
+  }
 
   setTimeout(() => {
     vanishText.style.opacity = '1';
     setTimeout(() => {
       vanishText.style.display = 'none';
-      banner.style.display = 'flex';
+      banner.style.opacity = '1'; // Show the banner
       boxContainer.style.display = 'flex'; // Show the box container
-      closeBox.style.display = 'flex'; // Show the close box
 
       // Adding pop-up animation to close box
-      closeBox.style.animation = 'popup 0.5s forwards';
+      banner.style.animation = 'popup 0.5s forwards';
     }, 2000); // Adjust timing as needed
   }, 500); // Adjust timing as needed
 
@@ -265,15 +301,10 @@
   styleSheet.insertRule(`
     @keyframes popup {
       0% {
-        transform: scale(0);
         opacity: 0;
       }
-      70% {
-        transform: scale(1.1);
-        opacity: 1;
-      }
       100% {
-        transform: scale(1);
+        opacity: 1;
       }
     }
   `, styleSheet.cssRules.length);
