--- a/showcase.html
+++ b/showcase.html
@@ -175,7 +175,7 @@
   <div class="panel-content">
     <a href="index.html" class="panel-button">Home</a>
     <a href="showcase.html" class="panel-button">Showcase</a>
-    <a href="review.html" class="panel-button">Reviews</a>
+    <a href="review.html" class="panel-button">Coming Soon</a>
   </div>
 </div>
 
