--- a/showcase.html
+++ b/showcase.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Vanish Review</title>
+<title>Vanish Showcase</title>
 <style>
   body {
     margin: 0;
@@ -154,7 +154,7 @@
   <div class="banner-buttons">
     <button class="panel-button" onclick="navigateToHome()">Home</button>
     <button class="panel-button" onclick="navigateToShowcase()">Showcase</button>
-    <button class="panel-button" onclick="navigateToReview()">Reviews</button>
+    <button class="panel-button" onclick="navigateToReview()">Coming Soon</button>
   </div>
 </div>
 
@@ -175,7 +175,7 @@
   <div class="panel-content">
     <a href="index.html" class="panel-button">Home</a>
     <a href="showcase.html" class="panel-button">Showcase</a>
-    <a href="review.html" class="panel-button">Coming Soon</a>
+    <a href="review.html" class="panel-button">Reviews</a>
   </div>
 </div>
 
