--- a/showcase.html
+++ b/showcase.html
@@ -54,7 +54,8 @@
   }
 
   .banner-buttons button {
-    padding: 10px 20px; /* Adjusted padding */
+    padding: 0.01px 15px; /* Adjusted padding */
+    min-width: 80px; /* Adjusted minimum width */
     background-color: rgb(19, 19, 19);
     color: white;
     border: none;
