--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 </head>
 <body>
 <div class="container">
-  <div class="vanish-text">Vanish Tools</div>
+  <div class="vanish-text">Vanish</div>
 </div>
 <div class="banner" id="banner">
   <div class="banner-left">
